Add description column to earnings table and sample data

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">#</th>
+                        <th scope="col">DESC</th>
                         <th scope="col">VALUE</th>
                         <th scope="col">DATE</th>
                     </tr>
@@ -31,22 +32,26 @@
                 <tbody>
                     <tr class="table-success">
                         <th scope="row">1</th>
+                        <td>Sample Description 1</td>
                         <td>₱0.00</td>
                         <td>October 8, 2025</td>
                     </tr>
                     <tr class="table-success">
                         <th scope="row">2</th>
+                        <td>Sample Description 2</td>
                         <td>₱0.00</td>
                         <td>October 8, 2025</td>
                     </tr>
                     <tr class="table-danger">
                         <th scope="row">3</th>
+                        <td>Sample Description 3</td>
                         <td>₱0.00</td>
                         <td>October 8, 2025</td>
                 </tbody>
                 <tfoot>
                     <tr>
                         <th scope="row">Total</th>
+                        <td></td>
                         <td>₱0.00</td>
                         <td></td>
                     </tr>
