--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,24 @@
     <title>Pera Analytics</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"></script>
-
+    <script src="https://unpkg.com/lucide@latest"></script>
     <style>
+        .floating-btn {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: calc(100% - 20px);
+            max-width: 900px;
+        }
     </style>
 </head>
 
 <body>
+    <button class="floating-btn btn btn-dark">
+        <i data-lucide="plus" style="width:32px; height:32px;"></i>
+    </button>
+
     <div class="mt-5" style="max-width: 900px; margin: auto; padding: 10px;">
         <div class="table-responsive">
             <div class="canvas-wrapper">
@@ -59,6 +71,9 @@
             </table>
         </div>
     </div>
+    <script>
+        lucide.createIcons();
+    </script>
     <script>
         const currentDate = new Date();
         const daysInMonth = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0).getDate();
