--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
 
         .add-transaction {
             width: 100%;
-            padding: 10px   ;
+            padding: 1rem;
+
         }
 
         .drawer-wrapper {
@@ -38,9 +39,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: black;
             color: white;
             border-radius: 50%;
+            padding: 0;
         }
     </style>
 </head>
@@ -54,9 +55,9 @@
         </button>
         <!-- navigation drawer button -->
         <div class="drawer-wrapper">
-            <div class="drawer-toggle">
-                <i data-lucide="chevron-up"></i>
-            </div>
+            <button class="drawer-toggle btn btn-dark d-flex align-items-center justify-content-center">
+                <i data-lucide="chevron-up" style="width: 2rem; height: 2rem;"></i>
+            </button>
         </div>
     </div>
 
