--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pera Analytics</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -48,16 +49,92 @@
 
 <body>
     <div class="add-transaction-wrapper">
-        <button class="add-transaction btn btn-dark d-flex align-items-center justify-content-center">
+        <button class="add-transaction btn btn-dark d-flex align-items-center justify-content-center"
+            data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottomAddTransaction"
+            aria-controls="offcanvasBottomAddTransaction">
             <i data-lucide="plus" style="margin-right: 8px;"></i>
             Add Transaction
 
         </button>
         <!-- navigation drawer button -->
-        <div class="drawer-wrapper">
+        <div class="drawer-wrapper" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottomChangeMonth"
+            aria-controls="offcanvasBottomChangeMonth">
             <button class="drawer-toggle btn btn-dark d-flex align-items-center justify-content-center">
                 <i data-lucide="chevron-up" style="width: 2rem; height: 2rem;"></i>
             </button>
+        </div>
+    </div>
+
+    <!-- offcanvas bottom change month -->
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomChangeMonth"
+        aria-labelledby="offcanvasBottomChangeMonthLabel">
+        <div>
+            <div style="max-width: 50rem; margin: auto;">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasBottomChangeMonthLabel">Change Month</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body small">
+                    <select class="form-select" id="monthDropdown">
+                        <option value="0">January</option>
+                        <option value="1">February</option>
+                        <option value="2">March</option>
+                        <option value="3">April</option>
+                        <option value="4">May</option>
+                        <option value="5">June</option>
+                        <option value="6">July</option>
+                        <option value="7">August</option>
+                        <option value="8">September</option>
+                        <option value="9">October</option>
+                        <option value="10">November</option>
+                        <option value="11">December</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- offcanvas bottom add transaction -->
+    <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomAddTransaction"
+        aria-labelledby="offcanvasBottomAddTransactionLabel">
+
+        <div class="offcanvas-header justify-content-center">
+            <div class="offcanvas-inner-header w-100">
+                <div class="d-flex justify-content-between align-items-center" style="max-width: 50rem; margin: auto;">
+                    <h5 class="offcanvas-title" id="offcanvasBottomAddTransactionLabel">Add Transaction</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+            </div>
+        </div>
+
+        <div class="offcanvas-body small d-flex justify-content-center">
+            <div class="w-100" style="max-width: 50rem;">
+                <form>
+                    <!-- value -->
+                    <div class="mb-3">
+                        <label for="transactionValue" class="form-label">Value</label>
+                        <input type="number" class="form-control" id="transactionValue" placeholder="0.00">
+                    </div>
+
+                    <!-- description -->
+                    <div class="mb-3">
+                        <label for="transactionDescription" class="form-label">Description</label>
+                        <input type="text" class="form-control" id="transactionDescription"
+                            placeholder="Transaction Description">
+                    </div>
+
+                    <!-- calendar -->
+                    <div class="mb-3">
+                        <label for="transactionDate" class="form-label">Date</label>
+                        <input type="date" class="form-control" id="transactionDate">
+                    </div>
+
+                    <!-- submit button -->
+                    <div class="d-grid" style="padding-bottom: 20px;">
+                        <button type="submit" class="btn btn-primary">Add Transaction</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -73,35 +150,36 @@
                 <thead class="table-dark">
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">DESC</th>
                         <th scope="col">VALUE</th>
+                        <th scope="col">DESC</th>
                         <th scope="col">DATE</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="table-success">
                         <th scope="row">1</th>
-                        <td>Sample Description 1</td>
                         <td>₱0.00</td>
+                        <td>Sample Description 1</td>
                         <td>October 8, 2025</td>
                     </tr>
                     <tr class="table-success">
                         <th scope="row">2</th>
-                        <td>Sample Description 2</td>
                         <td>₱0.00</td>
+                        <td>Sample Description 2</td>
                         <td>October 8, 2025</td>
                     </tr>
                     <tr class="table-danger">
                         <th scope="row">3</th>
-                        <td>Sample Description 3</td>
                         <td>₱0.00</td>
+                        <td>Sample Description 3</td>
                         <td>October 8, 2025</td>
+                    </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <th scope="row">Total</th>
-                        <td></td>
                         <td>₱0.00</td>
+                        <td></td>
                         <td></td>
                     </tr>
                 </tfoot>
