Refactor offcanvas component for changing month; enhance layout and add year dropdown with log transactions checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -68,27 +68,45 @@
     <!-- offcanvas bottom change month -->
     <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomChangeMonth"
         aria-labelledby="offcanvasBottomChangeMonthLabel">
-        <div>
-            <div style="max-width: 50rem; margin: auto;">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasBottomChangeMonthLabel">Change Month</h5>
+
+        <div class="offcanvas-header justify-content-center">
+            <div class="offcanvas-inner-header w-100">
+                <div class="d-flex justify-content-between align-items-center" style="max-width: 50rem; margin: auto;">
+                    <h5 class="offcanvas-title" id="offcanvasBottomChangeMonthLabel">Change Date</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
-                <div class="offcanvas-body small">
-                    <select class="form-select" id="monthDropdown">
-                        <option value="0">January</option>
-                        <option value="1">February</option>
-                        <option value="2">March</option>
-                        <option value="3">April</option>
-                        <option value="4">May</option>
-                        <option value="5">June</option>
-                        <option value="6">July</option>
-                        <option value="7">August</option>
-                        <option value="8">September</option>
-                        <option value="9">October</option>
-                        <option value="10">November</option>
-                        <option value="11">December</option>
-                    </select>
+            </div>
+        </div>
+
+        <div class="offcanvas-body small d-flex justify-content-center">
+            <div class="w-100" style="max-width: 50rem;">
+                <!-- month dropdown -->
+                <select class="form-select mb-3" id="monthDropdown">
+                    <option value="0">January</option>
+                    <option value="1">February</option>
+                    <option value="2">March</option>
+                    <option value="3">April</option>
+                    <option value="4">May</option>
+                    <option value="5">June</option>
+                    <option value="6">July</option>
+                    <option value="7">August</option>
+                    <option value="8">September</option>
+                    <option value="9">October</option>
+                    <option value="10">November</option>
+                    <option value="11">December</option>
+                </select>
+
+                <!-- year dropdown -->
+                <select class="form-select" id="yearDropdown">
+                    <option value="2025" selected>2025</option>
+                </select>
+
+                <!-- checkbox of log all transactions -->
+                <div class="form-check mt-3">
+                    <input class="form-check-input" type="checkbox" value="" id="logAllTransactions">
+                    <label class="form-check-label" for="logAllTransactions">
+                        Log all transactions
+                    </label>
                 </div>
             </div>
         </div>
@@ -131,7 +149,7 @@
 
                     <!-- submit button -->
                     <div class="d-grid" style="padding-bottom: 20px;">
-                        <button type="submit" class="btn btn-primary">Add Transaction</button>
+                        <button type="submit" class="btn btn-dark">Add Transaction</button>
                     </div>
                 </form>
             </div>
@@ -139,13 +157,13 @@
     </div>
 
 
-    <div class="mt-5" style="max-width: 50rem; margin: auto; padding: 10px;">
+    <div class="mt-5 mb-5" style="max-width: 50rem; margin: auto; padding: 10px;">
         <div class="table-responsive">
             <div class="canvas-wrapper">
                 <canvas id="chart"></canvas>
             </div>
 
-            <table class="table table-hover table-sm mt-2">
+            <table class="table table-hover table-sm small mt-2" id="transactionTable">
                 <caption>Rip to my wallet</caption>
                 <thead class="table-dark">
                     <tr>
@@ -155,30 +173,14 @@
                         <th scope="col">DATE</th>
                     </tr>
                 </thead>
+
                 <tbody>
-                    <tr class="table-success">
-                        <th scope="row">1</th>
-                        <td>₱0.00</td>
-                        <td>Sample Description 1</td>
-                        <td>October 8, 2025</td>
-                    </tr>
-                    <tr class="table-success">
-                        <th scope="row">2</th>
-                        <td>₱0.00</td>
-                        <td>Sample Description 2</td>
-                        <td>October 8, 2025</td>
-                    </tr>
-                    <tr class="table-danger">
-                        <th scope="row">3</th>
-                        <td>₱0.00</td>
-                        <td>Sample Description 3</td>
-                        <td>October 8, 2025</td>
-                    </tr>
                 </tbody>
+
                 <tfoot>
                     <tr>
                         <th scope="row">Total</th>
-                        <td>₱0.00</td>
+                        <td id="totalValue">₱0.00</td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -186,67 +188,219 @@
             </table>
         </div>
     </div>
+
     <script>
         lucide.createIcons();
-    </script>
-    <script>
-        const currentDate = new Date();
-        const daysInMonth = new Date(currentDate.getFullYear(), currentDate.getMonth() + 1, 0).getDate();
-        const days = Array.from({ length: daysInMonth }, (_, i) => i + 1);
 
-        const earnings = Array.from({ length: daysInMonth }, () => Math.floor(Math.random() * 1000));
-        const expenses = Array.from({ length: daysInMonth }, () => Math.floor(Math.random() * 1000));
+        const monthDropdown = document.getElementById('monthDropdown');
+        const yearDropdown = document.getElementById('yearDropdown');
+        const logAllTransactionsCheckbox = document.getElementById('logAllTransactions');
 
-        new Chart(document.getElementById('chart'), {
-            type: 'line',
-            data: {
-                labels: days,
-                datasets: [
-                    {
-                        label: 'Expenses',
-                        data: expenses,
-                        borderColor: 'red',
-                        backgroundColor: 'rgba(255, 0, 0, 0.2)',
-                        pointBackgroundColor: 'red',
-                        tension: 0.3,
-                        fill: true
-                    },
-                    {
-                        label: 'Earnings',
-                        data: earnings,
-                        borderColor: 'green',
-                        backgroundColor: 'rgba(60, 179, 113, 0.2)',
-                        pointBackgroundColor: 'green',
-                        tension: 0.3,
-                        fill: true
-                    }
-                ]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: {
-                    tooltip: {
-                        mode: 'index',
-                        intersect: false,
-                    },
-                },
-                scales: {
-                    y: {
-                        beginAtZero: true,
-                        title: {
-                            display: true,
-                            text: 'Amount (₱)'
+        const tableBody = document.querySelector('#transactionTable tbody');
+        const totalValueCell = document.getElementById('totalValue');
+
+        const ctx = document.getElementById('chart').getContext('2d');
+        let chart;
+
+        const monthNames = [
+            "January", "February", "March", "April", "May", "June",
+            "July", "August", "September", "October", "November", "December"
+        ];
+
+        function generateData(month, year) {
+            const daysInMonth = new Date(year, month + 1, 0).getDate();
+            const days = Array.from({ length: daysInMonth }, (_, i) => i + 1);
+            const earnings = Array.from({ length: daysInMonth }, () => Math.floor(Math.random() * 1000));
+            const expenses = Array.from({ length: daysInMonth }, () => Math.floor(Math.random() * 1000));
+            return { days, earnings, expenses };
+        }
+
+        function updateChart(month, year) {
+            const { days, earnings, expenses } = generateData(month, year);
+            if (chart) chart.destroy();
+
+            chart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: days,
+                    datasets: [
+                        {
+                            label: 'Expenses',
+                            data: expenses,
+                            borderColor: 'red',
+                            backgroundColor: 'rgba(255, 0, 0, 0.2)',
+                            pointBackgroundColor: 'red',
+                            tension: 0.3,
+                            fill: true
+                        },
+                        {
+                            label: 'Earnings',
+                            data: earnings,
+                            borderColor: 'green',
+                            backgroundColor: 'rgba(60, 179, 113, 0.2)',
+                            pointBackgroundColor: 'green',
+                            tension: 0.3,
+                            fill: true
                         }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        tooltip: {
+                            mode: 'index',
+                            intersect: false,
+                        },
                     },
-                    x: {
-                        title: {
-                            display: true,
-                            text: 'Day of the Month (October)'
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            title: {
+                                display: true,
+                                text: 'Amount (₱)'
+                            }
+                        },
+                        x: {
+                            title: {
+                                display: true,
+                                text: `Day of the Month (${monthNames[month]} ${year})`
+                            }
                         }
                     }
                 }
+            });
+        }
+
+        function updateChartAll(year) {
+            if (chart) chart.destroy();
+            const months = monthNames;
+            const earnings = months.map(() => Math.floor(Math.random() * 30000));
+            const expenses = months.map(() => Math.floor(Math.random() * 30000));
+
+            chart = new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: months,
+                    datasets: [
+                        {
+                            label: 'Expenses',
+                            data: expenses,
+                            backgroundColor: 'rgba(255, 0, 0, 0.6)',
+                        },
+                        {
+                            label: 'Earnings',
+                            data: earnings,
+                            backgroundColor: 'rgba(60, 179, 113, 0.6)',
+                        }
+                    ]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        tooltip: {
+                            mode: 'index',
+                            intersect: false,
+                        },
+                    },
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            title: {
+                                display: true,
+                                text: 'Amount (₱)'
+                            }
+                        },
+                        x: {
+                            title: {
+                                display: true,
+                                text: `Monthly Summary (${year})`
+                            }
+                        }
+                    }
+                }
+            });
+        }
+
+        function updateTable(month, year) {
+            tableBody.innerHTML = '';
+            let total = 0;
+
+            for (let i = 1; i <= 10; i++) {
+                const value = (Math.random() * 1000).toFixed(2);
+                const type = Math.random() > 0.5 ? 'success' : 'danger';
+                const date = `${monthNames[month]} ${Math.floor(Math.random() * 28) + 1}, ${year}`;
+                total += parseFloat(value);
+
+                const row = `
+                    <tr class="table-${type}">
+                        <th scope="row">${i}</th>
+                        <td>₱${value}</td>
+                        <td>Sample Transaction ${i}</td>
+                        <td>${date}</td>
+                    </tr>
+                `;
+                tableBody.insertAdjacentHTML('beforeend', row);
             }
+            totalValueCell.textContent = `₱${total.toFixed(2)}`;
+        }
+
+        function updateTableAll(year) {
+            tableBody.innerHTML = '';
+            let total = 0;
+            let count = 1;
+
+            monthNames.forEach((month, monthIndex) => {
+                for (let i = 1; i <= 5; i++) {
+                    const value = (Math.random() * 1000).toFixed(2);
+                    const type = Math.random() > 0.5 ? 'success' : 'danger';
+                    const date = `${month} ${Math.floor(Math.random() * 28) + 1}, ${year}`;
+                    total += parseFloat(value);
+
+                    const row = `
+                        <tr class="table-${type}">
+                            <th scope="row">${count++}</th>
+                            <td>₱${value}</td>
+                            <td>Sample Transaction ${i} (${month})</td>
+                            <td>${date}</td>
+                        </tr>
+                    `;
+                    tableBody.insertAdjacentHTML('beforeend', row);
+                }
+            });
+            totalValueCell.textContent = `₱${total.toFixed(2)}`;
+        }
+
+        function updateAnalytics() {
+            const month = parseInt(monthDropdown.value);
+            const year = parseInt(yearDropdown.value);
+            updateChart(month, year);
+            updateTable(month, year);
+        }
+
+        logAllTransactionsCheckbox.addEventListener('change', () => {
+            const isChecked = logAllTransactionsCheckbox.checked;
+            monthDropdown.disabled = isChecked;
+            yearDropdown.disabled = isChecked;
+            if (isChecked) {
+                const year = parseInt(yearDropdown.value);
+                updateChartAll(year);
+                updateTableAll(year);
+            } else {
+                updateAnalytics();
+            }
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const currentDate = new Date();
+            monthDropdown.value = currentDate.getMonth();
+            yearDropdown.value = currentDate.getFullYear();
+            logAllTransactionsCheckbox.checked = false;
+
+            monthDropdown.addEventListener('change', updateAnalytics);
+            yearDropdown.addEventListener('change', updateAnalytics);
+            updateAnalytics();
         });
     </script>
 </body>
