Remove month reference from sample transaction description for clarity

--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,7 @@
                         <tr class="table-${type}">
                             <th scope="row">${count++}</th>
                             <td>₱${value}</td>
-                            <td>Sample Transaction ${i} (${month})</td>
+                            <td>Sample Transaction ${i}</td>
                             <td>${date}</td>
                         </tr>
                     `;
